[package]
name = "yy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.3"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"


# [dependencies]
# bootloader = "0.5.1"

# # the profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# # the profile used for `cargo build --release`
# #toml文件的注释为#
# [profile.release]
# panic = "abort" # disable stack unwinding on panic